# build-graph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  graph.example.toml  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: agent-prompts.md  guide.md
examples/: README.md
examples/expected/: graph-compact.json  graph.json
examples/tiny-project/app/: cli.py  core.py
examples/tiny-project/docs/: design.md
i18n/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md  guide.de.md  guide.es.md  guide.fr.md  guide.it.md  guide.ja.md  guide.ko.md  guide.pt.md  guide.ru.md  guide.zh.md
schema/: graph-compact-v2.schema.json  graph-v1.schema.json
src/build_graph/: __init__.py  _build.py  _common.py  _config.py  _console.py  _coverage.py  _diff.py  _git.py  _heat.py  _render.py  graph.py  links.py  query.py  related.py
src/build_graph/resources/: body.html  boot.js  engine.js  i18n.js  main.js  style.css  ui.js
tests/: test_build_edges.py  test_cli_smoke.py  test_coverage.py  test_dead_exemptions.py  test_examples.py  test_export_schemas.py  test_extract_file_references.py  test_git_overlay.py  test_heat.py  test_init_lifecycle.py  test_links_cli.py  test_query.py  test_ref_diff.py  test_related.py  test_related_git_modes.py  test_resolve_python_import.py
