[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "graph-build"
dynamic = ["version", "readme"]
description = "Interactive code+docs dependency graph with doc-sync tooling and an AI-agent-friendly JSON export"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Yuriy Totyshev" }]
keywords = [
    "dependency-graph",
    "documentation",
    "doc-sync",
    "visualization",
    "d3",
    "ast",
    "imports",
    "llm",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Mr-Freewan/build-graph"
Repository = "https://github.com/Mr-Freewan/build-graph"
Documentation = "https://github.com/Mr-Freewan/build-graph/blob/main/docs/guide.md"
"Live demo" = "https://mr-freewan.github.io/build-graph/"
Changelog = "https://github.com/Mr-Freewan/build-graph/blob/main/CHANGELOG.md"
Issues = "https://github.com/Mr-Freewan/build-graph/issues"

[project.scripts]
build-graph = "build_graph.graph:main"
find-related-docs = "build_graph.related:main"
verify-doc-links = "build_graph.links:main"
graph-query = "build_graph.query:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "jsonschema>=4"]

[tool.hatch.version]
path = "src/build_graph/__init__.py"

# PyPI renders the readme outside the repo, so relative links break there.
# README.md stays relative-linked for GitHub (camo rejects external images
# over ~5 MB, so the 15 MB hero GIF must stay a repo-relative path); these
# substitutions rewrite the packaged copy to absolute URLs, with a static
# JPEG standing in for the animated hero.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(docs/media/hero\.gif\)'
replacement = '(https://raw.githubusercontent.com/Mr-Freewan/build-graph/main/docs/media/hero-dark.jpg)'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="docs/media/banner\.jpg"'
replacement = 'src="https://raw.githubusercontent.com/Mr-Freewan/build-graph/main/docs/media/banner.jpg"'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\((docs/guide\.md|docs/agent-prompts\.md|graph\.example\.toml|LICENSE|CHANGELOG\.md|CONTRIBUTING\.md)\)'
replacement = '](https://github.com/Mr-Freewan/build-graph/blob/main/\g<1>)'

[tool.hatch.build.targets.wheel]
packages = ["src/build_graph"]

[tool.hatch.build.targets.sdist]
# Guide GIFs weigh ~100MB — they belong to the GitHub repo, not the PyPI sdist.
exclude = ["docs/media"]

[tool.pytest.ini_options]
testpaths = ["tests"]
